force-app/main/default/objects/AIMessageCalloutEvent__e/AIMessageCalloutEvent__e.object-meta.xml
<CustomObject>
    <description>Published when an AI provider callout needs a retry with a fresh set of governor limits. Carries only the two Ids needed to redo the turn from scratch - AIMessageCalloutEventHandler enqueues AiMessageProcessingQueueable, which reloads the Agent/Model Configuration/Prompt Template/message history/tools from AIConversationMessageId__c and calls AIAgentManager.executeAiMessage again. No request/response state is carried on the event itself.</description>
    <label>AI Message Callout Event</label>
    <pluralLabel>AI Message Callout Events</pluralLabel>
</CustomObject>