force-app/main/default/objects/AIMessageCalloutEvent__e/fields/AIConversationId__c.field-meta.xml
<CustomField>
    <fullName>AIConversationId__c</fullName>
    <description>The AIConversation__c this in-flight turn belongs to.</description>
    <label>AI Conversation Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>