force-app/main/default/objects/AIMessageCalloutEvent__e/fields/AIConversationMessageId__c.field-meta.xml
<CustomField>
    <fullName>AIConversationMessageId__c</fullName>
    <description>The triggering AIConversationMessage__c for this turn - reloading everything needed to run it again starts from this Id.</description>
    <label>AI Conversation Message Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>