force-app/main/default/objects/AIMessageCalloutEvent__e/fields/AttemptNumber__c.field-meta.xml
<CustomField>
    <fullName>AttemptNumber__c</fullName>
    <description>The attempt about to be made (2 or higher - attempt 1 always runs synchronously in the original transaction). Bounds how many times this message can be retried against AIModelConfiguration__c.RetryAttempts__c; everything else about the turn is rebuilt fresh rather than carried on this event.</description>
    <label>Attempt Number</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>